# sql-migration-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  seeds.py  test_all_tasks.py  test_smoke.py
docs/: index.html  script.js  style.css
server/: __init__.py  app.py  environment.py  grader.py
